# agent-ctl

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  agent-ctl.example.yaml  agentctl.example.yaml  constraints.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  provider-smoke-nightly.yml  security-scan.yml
agent_ctl/: __init__.py  cli.py  config.py  errors.py  models.py
agent_ctl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agent_ctl/client/: gateway_client.py
agent_ctl/core/: _host.py  budget.py  cache.py  capture.py  circuit.py  cost.py  embedding_runner.py  gateway.py  router.py  stream_runner.py
agent_ctl/obs/: metrics.py
agent_ctl/providers/: _http.py  anthropic_provider.py  base.py  catalog.py  fake.py  openai_provider.py  tooltrans.py
agent_ctl/server/: app.py
agent_ctl/store/: async_store.py  base.py  redaction.py  sqlite_store.py
agentctl/: __init__.py  cli.py  config.py  errors.py  models.py
agentctl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
agentctl/client/: gateway_client.py
agentctl/core/: cache.py  cost.py  gateway.py  router.py
agentctl/providers/: anthropic_provider.py  base.py  fake.py
agentctl/server/: app.py
agentctl/store/: base.py  sqlite_store.py
docker/: agent_ctl.yaml
docs/: configuration.md  operations.md  release.md
docs/adr/: 0001-gateway-maturity-and-hardening.md  0002-governance-and-audit-hardening.md
docs/design/: architecture.md
docs/superpowers/plans/: 2026-06-24-agentctl-gateway-capture.md
docs/superpowers/specs/: 2026-06-24-agentctl-gateway-capture-design.md  (+2 more)
tests/: test_anthropic_provider.py  test_async_store.py  test_budget.py  test_cache.py  test_catalog.py  test_circuit.py  test_cli.py  test_client.py  test_concurrency.py  test_config.py  test_cost.py  test_fake_provider.py  test_gateway_deadline.py  test_gateway_embed.py  test_gateway_invoke.py  test_gateway_retry.py  test_gateway_stream.py  test_metrics.py  test_models.py  test_openai_provider.py  test_provider_smoke.py  test_redaction.py  test_router.py  test_server.py  test_server_skeleton.py  test_smoke_real.py  test_sqlite_store.py  test_tooltrans.py
