[project]
name = "agent-ctl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2", "pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10", "types-PyYAML>=6", "fastapi>=0.115", "httpx>=0.27"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
server = ["fastapi>=0.115", "uvicorn>=0.30"]

[project.scripts]
agent-ctl = "agent_ctl.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:starlette.*", "ignore:Using `httpx`:UserWarning"]
