[project]
name = "agent-ctl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2", "pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10", "types-PyYAML>=6", "fastapi>=0.115", "httpx>=0.27", "prometheus-client>=0.20"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
server = ["fastapi>=0.115", "uvicorn>=0.30", "prometheus-client>=0.20"]

[project.scripts]
agent-ctl = "agent_ctl.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent_ctl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:starlette.*", "ignore:Using `httpx`:UserWarning"]

[tool.mypy]
# 可选 extra(server/anthropic/openai)在 CI 的 dev 环境不安装,
# 其懒加载导入(uvicorn/anthropic/openai)无 stub,放行缺失导入,避免 mypy 误红。
[[tool.mypy.overrides]]
module = ["uvicorn", "uvicorn.*", "anthropic", "anthropic.*", "openai", "openai.*"]
ignore_missing_imports = true
